[package]
name = "session_types"
version = "0.3.1"
authors = [ "Philip Munksgaard <pmunksgaard@gmail.com>"
          , "Thomas Bracht Laumann Jespersen <laumann.thomas@gmail.com>"
          , "Cameron Eldridge <cam.eldridge@gmail.com>"
          ]

description = "An implementation of session types in Rust"
repository = "https://github.com/foxfriends/session-types"
readme = "README.md"
keywords = ["session", "types", "channels", "concurrency", "communication"]
edition = "2018"

license = "MIT"

[dependencies]
futures-util = "0.3"
ipc-channel = { git = "https://github.com/foxfriends/ipc-channel.git", branch = "master", features = ["async"] }
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
compiletest_rs = { version = "0.3.16", features = ["stable"] }
rand = "0.5.5"
